# AIAgents-bootcamp

./: pyproject.toml
project/: data_ingestion.ipynb
week 2/: homework.ipynb  summaries.txt
week 3/code/: .gitignore  Makefile  README.md  main.py  pyproject.toml  search_agent.py  search_tools.py
week 3/code/tests/: test_agent.py  utils.py
week 3/homework/: main.py  tools.py  wiki_agent.py  wikiagent.ipynb
week 3/homework/tests/: test_wiki_agent.py  test_wikiagent.py
week 3/notebooks/: ground-truth.ipynb  ground_truth_evidently.csv
