[project]
name = "ai-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "jupyter>=1.1.1",
    "minsearch>=0.0.7",
    "openai>=2.2.0",
    "openai-agents>=0.4.1",
    "pydantic-ai>=1.2.1",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "toyaikit>=0.0.5",
    "youtube-transcript-api>=1.2.2",
]


